Add solution code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Node Test App</title>
   </head>
   <body>
-    <button type="button" class="clickable" onclick="handleClick">Click Me!</button>
+    <button type="button" class="clickable" onclick="handleClick()">Click Me!</button>
     <div class="container">
       The counter is: <span class="counter"></span>
     </div>
